# swc-plugin-rsd

./: .devenv.flake.nix  .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  package.json
src/: lib.rs  plugin.rs
tests/: fixture.rs
tests/fixtures/basic/: input.tsx  output.js
tests/fixtures/props/: input.tsx  output.js
tests/fixtures/styles/: input.tsx  output.js
tests/fixtures/unrelated/: input.tsx  output.js
