[package]
authors = ["Cole Potrocky <cole@colepotrocky.com>"]
description = "SWC plugin for react-strict-dom"
name = "swc_plugin_rsd"
version = "0.1.0"
publish = false
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
swc_atoms = "2.0.0"
swc_common = "4.0.1"
swc_core = { version = "6.0.2", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "__parser",
] }
swc_ecma_ast = "4.0.1"
swc_ecma_visit = "4.0.1"
