[package]
authors = ["Cole Potrocky <cole@colepotrocky.com>"]
description = "SWC plugin for react-strict-dom"
name = "swc_plugin_rsd"
version = "0.1.0"
publish = false
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"
debug = true

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
swc_atoms = "2.0.0"
swc_common = "4.0.0"
swc_core = { version = "5.0.0", features = [
    "ecma_plugin_transform",
    "ecma_utils",
    "__parser",
] }
swc_ecma_ast = "4.0.0"
swc_ecma_visit = "4.0.0"

[dev-dependencies]
swc_ecma_transforms_testing = "6.0.0"
testing = "5.0.0"
